Small cleanups to manifest construction and parsing